# rivac-cv

./: .gitignore  .uv-commands  README.md  REORGANIZATION_STATUS.md  main.py  pyproject.toml  streamlit_app.py  uv.toml
config/: app_config.yaml  models.yaml
data/models/: README.md
data/videos/: .gitkeep
docs/: Arquitetura de Software.md  INTERPRETACAO_DETECCOES.md  README.md  UV_GUIDE.md  ci_cd_uv_examples.md  pipeline_comparison.md  software_architecture.md  uv_guide.md
src/: __init__.py  pipeline.py  pipeline_v2.py
src/counting/: __init__.py
src/deteccao/: __init__.py  base_detector.py  yolo_detector.py
src/ingestao/: __init__.py  base_source.py  video_source.py
src/roi/: __init__.py
src/tracking/: __init__.py
src/utils/: __init__.py  config.py  logger.py
